--- a/styles/card.css
+++ b/styles/card.css
@@ -8,6 +8,8 @@
   margin-bottom: 32px;
   box-shadow: 0 4px 8px #943d151e;
   transition: all 0.3s ease;
+  position: relative;
+  z-index: 2;
 }
 
 .card:hover {
@@ -77,6 +79,8 @@
   text-align: center;
   color: #943d15;
   font-size: 14px;
+  position: relative;
+  z-index: 2;
 }
 
 .footer a {
